# GSECS

./: .clang-format  CMakeLists.txt  autotest.sh  reload.sh
example/: CMakeLists.txt  build.sh  main.cpp  run.sh  test_header.h
include/: component.h  component.hpp  entity.h  gs_ecs.h  system.h  system.hpp  thread.h  thread.hpp
src/: CMakeLists.txt  gs_ecs.cpp  system.cpp
src/traverser/: multi_thread_traverser.cpp  single_thread_traverser.cpp
test/: CMakeLists.txt  main.cpp
test/src/: gs_ecs_test_header.h  system_manager_test.cpp  system_test.cpp
